# rlengine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
cmake/: imgui.cmake  rlimgui.cmake
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt  scene.rlescene
engine/include/: rlengine.hpp
engine/include/core/: Application.hpp  Headers.hpp  Log.hpp  Project.hpp  Types.hpp
engine/include/nodes/: Node.hpp  NodeRegistry.hpp
engine/include/nodes/2D/: Node2D.hpp  NodeCamera2D.hpp
engine/include/nodes/3D/: Node3D.hpp  NodeCamera3D.hpp  NodeMesh3D.hpp
engine/include/resources/: ResourceManager.hpp
engine/include/scene/: Scene.hpp  SceneManager.hpp  SceneTree.hpp
engine/include/serialization/: NodeRegistry.hpp  SceneSerializer.hpp
engine/src/core/: Application.cpp  Log.cpp
engine/src/nodes/: Node.cpp  NodeRegistry.cpp
engine/src/nodes/2D/: Node2D.cpp  NodeCamera2D.cpp
engine/src/nodes/3D/: Node3D.cpp  NodeCamera3D.cpp  NodeMesh3D.cpp
engine/src/resources/: ResourceManager.cpp
engine/src/scene/: Scene.cpp  SceneManager.cpp
engine/src/serialization/: NodeRegistry.cpp  SceneSerializer.cpp
sandbox/: CMakeLists.txt  main.cpp  scene1.rlscene
sandbox/include/: PlayerNode.hpp  Sandbox.hpp  SandboxModule.hpp  SandboxProject.hpp
sandbox/scenes/: main.rlscene  new scene.rlscene  scene1.rlscene
sandbox/src/: Sandbox.cpp  SandboxModule.cpp  SandboxProject.cpp  main.cpp
